# concentrate-qual

./: .env  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/concentrate/: dao.py  exceptions.py  models.py  router.py  schemas.py
backend/app/concentrate/services/: create_concentrate.py  delete_concentrate.py  get_all_concentrates.py  get_concentrate_by_id.py  get_concentrate_statistics.py  update_concentrate.py
backend/app/core/: config.py  dao.py  database.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: fc39bfeb6176_init_db.py
backend/app/users/: auth.py  dao.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py
backend/app/users/services/: create_user.py  login_user.py  logout_user.py
backend/scripts/: init_users.py
backend/tests/: conftest.py  test_index.py
backend/tests/unit/: conftest.py
backend/tests/unit/concentrate/: test_concentrate_services.py  test_create_concentrate.py  test_delete_concentrate.py  test_get_all_concentrates.py  test_get_concentrate_statistics.py  test_update_concentrate.py
backend/tests/unit/users/: test_create_user.py  test_login_user.py  test_logout_user.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  api.js
frontend/src/components/: Header.jsx
frontend/src/pages/: AddConcentrate.jsx  Home.jsx  Login.jsx  Report.jsx
